Return GNOME_KEYRING_RESULT_NO_MATCH when no secret is found

This reverts 18affdaa, but really fixes
https://bugzilla.gnome.org/show_bug.cgi?id=608510